exports[`assertion schema > rejects assertion missing both fields in flaw subject 1`] = `
{
  "errors": [
    {
      "instancePath": "/assertions/0/subject",
      "schemaPath": "#/definitions/pkgSubject/required",
      "keyword": "required",
      "params": {
        "missingProperty": "pkg"
      },
      "message": "must have required property 'pkg'"
    },
    {
      "instancePath": "/assertions/0/subject",
      "schemaPath": "#/required",
      "keyword": "required",
      "params": {
        "missingProperty": "dependency"
      },
      "message": "must have required property 'dependency'"
    },
    {
      "instancePath": "/assertions/0/subject/flaw",
      "schemaPath": "#/definitions/flawSubject/properties/flaw/minProperties",
      "keyword": "minProperties",
      "params": {
        "limit": 1
      },
      "message": "must NOT have fewer than 1 properties"
    },
    {
      "instancePath": "/assertions/0/subject",
      "schemaPath": "#/required",
      "keyword": "required",
      "params": {
        "missingProperty": "assertion"
      },
      "message": "must have required property 'assertion'"
    },
    {
      "instancePath": "/assertions/0/subject",
      "schemaPath": "#/anyOf",
      "keyword": "anyOf",
      "params": {},
      "message": "must match a schema in anyOf"
    }
  ]
}
`;

exports[`assertion schema > rejects assertion missing fields in assertion subject 1`] = `
{
  "errors": [
    {
      "instancePath": "/assertions/0/subject",
      "schemaPath": "#/definitions/pkgSubject/required",
      "keyword": "required",
      "params": {
        "missingProperty": "pkg"
      },
      "message": "must have required property 'pkg'"
    },
    {
      "instancePath": "/assertions/0/subject",
      "schemaPath": "#/required",
      "keyword": "required",
      "params": {
        "missingProperty": "dependency"
      },
      "message": "must have required property 'dependency'"
    },
    {
      "instancePath": "/assertions/0/subject",
      "schemaPath": "#/definitions/flawSubject/required",
      "keyword": "required",
      "params": {
        "missingProperty": "flaw"
      },
      "message": "must have required property 'flaw'"
    },
    {
      "instancePath": "/assertions/0/subject/assertion",
      "schemaPath": "#/definitions/issuerIdentity/required",
      "keyword": "required",
      "params": {
        "missingProperty": "issuerSpecificID"
      },
      "message": "must have required property 'issuerSpecificID'"
    },
    {
      "instancePath": "/assertions/0/subject",
      "schemaPath": "#/anyOf",
      "keyword": "anyOf",
      "params": {},
      "message": "must match a schema in anyOf"
    }
  ]
}
`;

exports[`assertion schema > rejects assertion missing issuerSpecificID in dependency subject 1`] = `
{
  "errors": [
    {
      "instancePath": "/assertions/0",
      "schemaPath": "#/definitions/issuerIdentity/required",
      "keyword": "required",
      "params": {
        "missingProperty": "issuerSpecificID"
      },
      "message": "must have required property 'issuerSpecificID'"
    }
  ]
}
`;

exports[`assertion schema > rejects assertion missing pkg name in dependency subject 1`] = `
{
  "errors": [
    {
      "instancePath": "/assertions/0/subject",
      "schemaPath": "#/definitions/pkgSubject/required",
      "keyword": "required",
      "params": {
        "missingProperty": "pkg"
      },
      "message": "must have required property 'pkg'"
    },
    {
      "instancePath": "/assertions/0/subject/dependency/pkg",
      "schemaPath": "#/definitions/pkgReference/required",
      "keyword": "required",
      "params": {
        "missingProperty": "name"
      },
      "message": "must have required property 'name'"
    },
    {
      "instancePath": "/assertions/0/subject",
      "schemaPath": "#/definitions/flawSubject/required",
      "keyword": "required",
      "params": {
        "missingProperty": "flaw"
      },
      "message": "must have required property 'flaw'"
    },
    {
      "instancePath": "/assertions/0/subject",
      "schemaPath": "#/required",
      "keyword": "required",
      "params": {
        "missingProperty": "assertion"
      },
      "message": "must have required property 'assertion'"
    },
    {
      "instancePath": "/assertions/0/subject",
      "schemaPath": "#/anyOf",
      "keyword": "anyOf",
      "params": {},
      "message": "must match a schema in anyOf"
    }
  ]
}
`;

exports[`assertion schema > rejects assertion without required fields 1`] = `
{
  "errors": [
    {
      "instancePath": "/assertions/0",
      "schemaPath": "#/definitions/issuerIdentity/required",
      "keyword": "required",
      "params": {
        "missingProperty": "issuerSpecificID"
      },
      "message": "must have required property 'issuerSpecificID'"
    }
  ]
}
`;

exports[`assertion schema > rejects empty object 1`] = `
{
  "errors": [
    {
      "instancePath": "",
      "schemaPath": "#/required",
      "keyword": "required",
      "params": {
        "missingProperty": "assertions"
      },
      "message": "must have required property 'assertions'"
    }
  ]
}
`;

exports[`assertion schema > rejects missing assertions array 1`] = `
{
  "errors": [
    {
      "instancePath": "",
      "schemaPath": "#/required",
      "keyword": "required",
      "params": {
        "missingProperty": "assertions"
      },
      "message": "must have required property 'assertions'"
    }
  ]
}
`;
